tests/fails/f19.t
require("fail")

terra foo()
    return -false
end
foo()
